Fixing up docker to get ready for uncertain environments